// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Button renders default variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-gold text-black hover:bg-gold/80 px-4 py-2"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button renders glow variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-gold text-black shadow-lg shadow-gold/50 hover:shadow-xl hover:shadow-gold/70 px-4 py-2"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button renders large size 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-md font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-gold text-black hover:bg-gold/80 px-6 py-3 text-lg"
  >
    Click me
  </button>
</DocumentFragment>
`;

exports[`Button renders outline variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none border border-gold text-gold hover:bg-gold hover:text-black px-4 py-2"
  >
    Click me
  </button>
</DocumentFragment>
`;
